<!--
  ~ Copyright (c) 2018 Emanuel Machado da Silva <emanuel.mch@gmail.com>
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<resources>
    <string name="app_name">Toy Box</string>
    <string name="box_number">Box %d</string>

    <!-- Catbox -->
    <string name="catbox_title">Cat in the Box</string>

    <plurals name="cat_found">
        <item quantity="one">Cat found on your first attempt!</item>
        <item quantity="other">Cat found after %d attempts!</item>
    </plurals>
    <string name="empty_box">Empty box on your %s attempt</string>
    <string name="attempts">Attempts:</string>

    <!-- Infinity -->
    <string name="infinity_title">Cat Infinity</string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="box_count">Box Count</string>
</resources>
